--- a/apps/web/src/components/Header/header-navigation.module.scss
+++ b/apps/web/src/components/Header/header-navigation.module.scss
@@ -148,7 +148,7 @@
     color: var(--accent-primary);
     text-decoration: underline;
     text-decoration-style: solid;
-    text-decoration-thickness: 0.2rem;
+    text-decoration-thickness: 0.6em;
     text-underline-offset: var(--block-border-width);
     font-weight: 700;
 }
