--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -9,18 +9,18 @@
 
     .content {
         display: grid;
-        grid-template-columns: repeat(
-            auto-fit,
-            minmax(calc(var(--component-product-card-width) + var(--block-padding)), auto)
-        );
-        column-count: 2;
-        column-gap: var(--block-spacer-large);
         gap: var(--block-spacer-large);
+        grid-auto-columns: 1fr;
+        grid-auto-rows: 1fr;
+        grid-template-columns: 1fr 1fr;
 
         @media (min-width: $breakpoint-mobile) {
             justify-content: start;
-            column-gap: var(--block-spacer);
             gap: var(--block-spacer);
+            grid-template-columns: repeat(
+                auto-fit,
+                minmax(calc(var(--component-product-card-width) + var(--block-padding)), auto)
+            );
         }
     }
 
@@ -36,11 +36,10 @@
         .content {
             display: grid;
             overflow-x: auto;
-            columns: none;
             grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
-            grid-auto-rows: 1fr;
+            grid-template-rows: 1fr;
+            grid-auto-flow: column;
             padding: var(--block-padding-large);
-
             scroll-padding-left: var(--block-padding-large);
             touch-action: pan-x pan-y;
             overscroll-behavior: auto auto;
