--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/variables.scss';
+@import '_globals.scss';
 
 .container {
     position: relative;
@@ -6,6 +6,8 @@
     height: 100%;
     min-width: 100%;
     min-height: 36.5rem;
+    scrollbar-color: var(--color-block-black) var(--color-block);
+    scrollbar-width: thin;
 
     .content {
         display: grid;
@@ -22,6 +24,47 @@
                 minmax(calc(var(--component-product-card-width) + var(--block-padding)), auto)
             );
         }
+
+        .viewAll {
+            position: relative;
+            flex: 1 auto;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-width: var(--component-product-card-width);
+            height: 100%;
+            padding: var(--block-padding) var(--block-padding-large);
+            scroll-snap-align: center;
+            border-radius: var(--block-border-radius);
+            background-color: var(--accent-secondary);
+            color: var(--accent-secondary-text);
+            border: calc(var(--block-border-width) * 1.5) solid var(--accent-secondary);
+            transition:
+                150ms ease-in-out color,
+                150ms ease-in-out background-color,
+                150ms ease-in-out border-color;
+
+            line-height: normal;
+            font-size: 2rem;
+            font-weight: 600;
+            text-align: center;
+
+            text-underline-offset: var(--block-border-width);
+            text-underline-position: auto;
+
+            &:is(:hover, :active, :focus, :focus-within) {
+                background-color: var(--accent-secondary-light);
+                border-color: var(--accent-primary-dark);
+                text-decoration: underline dotted 0.125em;
+
+                &,
+                a {
+                    color: var(--accent-primary-dark) !important;
+                }
+            }
+        }
     }
 
     &.skeleton {
@@ -36,11 +79,11 @@
         .content {
             display: grid;
             overflow-x: auto;
-            grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
-            grid-template-rows: 1fr;
+            grid-template-columns: repeat(auto-fill, minmax(1fr, var(--component-product-card-width)));
+            grid-auto-columns: 1fr;
+            grid-auto-rows: 1fr;
             grid-auto-flow: column;
             padding: var(--block-padding-large);
-            scroll-padding-left: var(--block-padding-large);
             touch-action: pan-x pan-y;
             overscroll-behavior: auto auto;
             scroll-snap-type: x mandatory;
@@ -53,46 +96,5 @@
                 overflow-x: hidden;
             }
         }
-    }
-}
-
-.viewAll {
-    position: relative;
-    flex: 1 auto;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: var(--component-product-card-width);
-    height: 100%;
-    padding: var(--block-padding) var(--block-padding-large);
-    scroll-snap-align: center;
-    border-radius: var(--block-border-radius);
-    background: var(--accent-secondary);
-    color: var(--accent-primary-dark);
-    border: calc(var(--block-border-width) * 1.5) solid var(--accent-secondary);
-    transition:
-        150ms ease-in-out color,
-        150ms ease-in-out background-color,
-        150ms ease-in-out border;
-
-    line-height: normal;
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-    text-decoration: underline 0.2rem dotted;
-    text-underline-offset: var(--block-border-width);
-
-    margin-right: calc(50vw - calc(var(--component-product-card-width) / 2 + calc(var(--block-spacer) * 2)));
-
-    @media (min-width: $breakpoint-mobile) {
-        margin-right: calc(($page-width / 2) + calc(var(--component-product-card-width) / 2));
-    }
-
-    &:is(:hover, :active, :focus, :focus-within) {
-        background: var(--accent-primary);
-        color: var(--accent-primary-text);
-        border-color: var(--accent-primary-dark);
     }
 }
