--- a/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
+++ b/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
@@ -1,25 +1,30 @@
-@import '@/styles/variables.scss';
+@import '_globals.scss';
 
 .container {
-    position: absolute;
+    position: fixed;
     inset: 7rem 0 0 -105vw;
-    z-index: 0;
-    width: 85vw;
-    height: calc(100vh - 6rem);
-    height: calc(100dvh - 6rem);
+    display: flex;
+    flex-grow: 1;
+
+    z-index: 5;
+    width: 38rem;
+    max-width: 100vw;
+    height: 100%;
+    height: calc(100vh - 7rem);
+    height: calc(100dvh - 7rem);
     background: var(--accent-secondary-light);
     border-right: var(--block-border-width) solid var(--accent-secondary-dark);
     color: var(--color-dark);
     transition: 150ms ease-in-out all;
     box-shadow: 1rem 1rem 1rem -0.5rem var(--color-block-shadow);
+    pointer-events: none;
 
     @media (min-width: $breakpoint-tablet-medium) {
         display: none;
     }
 }
 
-[data-menu-open='true'] {
-    .container {
-        left: 0;
-    }
+[data-menu-open='true'] .container {
+    pointer-events: unset;
+    left: 0;
 }
