--- a/apps/web/src/components/informational/alert.module.scss
+++ b/apps/web/src/components/informational/alert.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/variables.scss';
+@import '_globals.scss';
 
 .container {
     display: grid;
@@ -40,9 +40,9 @@
         a {
             color: var(--color);
 
-            text-decoration: underline;
-            text-decoration-style: dotted;
-            text-decoration-thickness: 0.2rem;
+            text-decoration: underline dotted 0.2rem;
+            text-underline-offset: var(--block-border-width);
+            text-underline-position: auto;
             text-underline-offset: var(--block-border-width);
         }
 
