--- a/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
+++ b/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/variables.scss';
+@import '_globals.scss';
 
 .container {
     display: grid;
@@ -10,9 +10,9 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: calc(var(--block-spacer-large) * 1.5);
+        gap: calc(var(--block-spacer-large) * 2);
 
-        padding: var(--block-padding-large);
+        padding: calc(var(--block-padding-large) * 2);
         border-radius: var(--block-border-radius);
         background: var(--accent-primary);
         color: var(--accent-primary-text);
@@ -22,7 +22,6 @@
             grid-template-columns: 1fr 1fr 1fr;
             justify-content: center;
             align-items: center;
-            gap: calc(var(--block-spacer-large) * 2);
         }
 
         .item {
