--- a/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/blog/layout.module.scss
+++ b/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/blog/layout.module.scss
@@ -6,7 +6,8 @@
     flex-direction: column;
 
     @media (min-width: $breakpoint-mobile) {
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr auto;
     }
 
     .content {
