PageProvider: Fix text size.

--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -106,7 +106,7 @@
 
     .quantity-action {
         display: grid;
-        grid-template-columns: 1fr auto;
+        grid-template-columns: auto 1fr;
         justify-content: space-between;
         align-items: end;
         height: 100%;
