--- a/apps/web/src/components/products/info-lines.module.scss
+++ b/apps/web/src/components/products/info-lines.module.scss
@@ -1,15 +1,19 @@
 @import '_globals.scss';
 
 .container {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     height: 100%;
     padding: 0;
     margin-bottom: var(--block-spacer);
 
+    @media (min-width: $breakpoint-mobile) {
+        display: flex;
+    }
+
     &:empty {
-        display: none;
+        display: none !important;
     }
 
     .item {
