CartSummary: Hide button instead of disabling it.

--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -192,3 +192,25 @@ input[type='search']:is(
         height: var(--block-padding-small) !important;
     }
 }
+
+@keyframes swing {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    15% {
+        transform: rotate(0deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    65% {
+        transform: rotate(180deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
