--- a/apps/web/src/app/(admin)/_scss/_text.scss
+++ b/apps/web/src/app/(admin)/_scss/_text.scss
@@ -8,9 +8,12 @@ h1 {
     font-weight: 800;
     line-height: 0.9;
     text-transform: uppercase;
+    hyphens: auto;
+    max-width: 100%;
+    hyphens: auto;
 
     @media (min-width: 950px) {
-        font-size: 4.75rem;
+        font-size: 3rem;
     }
 
     &:after {
@@ -21,7 +24,7 @@ h1 {
 }
 
 h2 {
-    font-size: 2.25rem;
+    font-size: 2rem;
     font-weight: 400;
     line-height: 1.075;
     letter-spacing: 0.02rem;
