--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,6 +20,37 @@ body {
     color: var(--color-dark);
     background: var(--color-bright);
 
+    &.BlackFriday,
+    .BlackFriday & {
+        background: #000000;
+        color: #fefefe;
+
+        main {
+            --accent-primary: var(--accent-primary-light);
+
+            .Banner {
+                h1 {
+                    text-transform: uppercase;
+                    font-size: 3.45em;
+                    font-weight: 800;
+                    line-height: 1;
+                }
+                h2 {
+                    text-transform: uppercase;
+                    font-size: 5em;
+                    font-weight: 400;
+                    line-height: 1;
+                }
+            }
+
+            a {
+                font-weight: 600;
+                text-transform: uppercase;
+                text-decoration: underline;
+            }
+        }
+    }
+
     @media screen and (max-width: 950px) {
         font-size: 10px;
     }
