API: Start work on multi-tenant content providers.

--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -167,6 +167,7 @@ img {
 }
 
 input[type='number'] {
+    appearance: textfield;
     -moz-appearance: textfield !important;
 
     &::-webkit-inner-spin-button {
