--- a/apps/web/src/app/(admin)/admin/(auth)/login/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/(auth)/login/page.module.scss
@@ -2,4 +2,17 @@
     display: flex;
     flex-direction: column;
     gap: var(--layout-section-padding);
+
+    .providers {
+        display: grid;
+        grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+        grid-auto-columns: 1fr;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: calc(var(--block-padding) / 2);
+
+        @media (min-width: 950px) {
+            grid-auto-columns: auto;
+        }
+    }
 }
