--- a/apps/web/src/app/(admin)/admin/docs/errors/[code]/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/docs/errors/[code]/page.module.scss
@@ -6,6 +6,19 @@
         gap: calc(var(--block-padding) / 2);
         width: 100%;
         max-width: 100%;
+
+        h1 {
+            @media (max-width: 950px) {
+                font-size: 3.25rem !important;
+            }
+        }
+
+        code {
+            padding: 0;
+            word-break: break-all;
+            white-space: pre-wrap;
+            background-color: unset;
+        }
     }
 
     .content {
@@ -17,16 +30,37 @@
         margin-top: calc(var(--layout-section-spacing) * 2);
 
         section {
-            margin: var(--block-padding) 0;
+            max-width: 100%;
+            margin: 0 0 calc(var(--block-padding) / 2) 0;
+
+            code {
+                word-break: break-all;
+                white-space: pre-wrap;
+                background-color: unset;
+                background: #82828226;
+            }
         }
 
         h3 {
-            font-size: 1.5em;
+            margin: 0 0 var(--block-padding) 0;
+            font-size: 1em;
         }
 
         p,
         ul {
             margin: 0 0 calc(var(--block-padding) / 2) 0;
+            font-size: 1.25em;
+            line-height: normal;
+        }
+
+        ul {
+            list-style: none;
+
+            li::before {
+                content: '-';
+                padding: 0 calc(var(--block-padding) / 2);
+                font-weight: 700;
+            }
         }
 
         img {
