Admin: Add error codes index page.

--- a/apps/web/src/app/(admin)/_scss/_text.scss
+++ b/apps/web/src/app/(admin)/_scss/_text.scss
@@ -56,7 +56,13 @@ h4 {
     }
 }
 
+p {
+    font-weight: 500;
+}
+
 a {
+    font-weight: inherit;
+    font-size: inherit;
     transition: 150ms ease-in-out color;
 
     &:hover {
@@ -80,6 +86,8 @@ code {
 
     &::before,
     &::after {
+        display: inline-block;
+        text-align: center;
         content: '`';
     }
 }
