--- a/apps/web/src/app/(admin)/_components/container.module.scss
+++ b/apps/web/src/app/(admin)/_components/container.module.scss
@@ -1,12 +1,14 @@
 .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 
     .content {
+        overflow-x: hidden;
         height: 100%;
-        min-height: calc(100vh - 10rem);
+        min-height: calc(100vh - 17.75rem);
         width: calc(100vw - calc(var(--layout-page-spacing) * 2));
         max-width: var(--layout-page-width);
         margin: var(--layout-page-spacing);
