--- a/apps/web/src/app/(admin)/_scss/_text.scss
+++ b/apps/web/src/app/(admin)/_scss/_text.scss
@@ -4,10 +4,11 @@
 }
 
 h1 {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
     text-transform: uppercase;
     hyphens: auto;
     max-width: 100%;
-    hyphens: auto;
 
     code {
         font-weight: 500;
@@ -39,13 +40,6 @@ h2 {
     }
 }
 
-h3 {
-    font-size: 1.8rem;
-    font-weight: 800;
-    line-height: 1;
-    text-transform: lowercase;
-}
-
 h1,
 h2,
 h3,
@@ -58,6 +52,8 @@ h4 {
 
 p {
     font-weight: 500;
+    font-size: 1.15em;
+    line-height: normal;
 }
 
 a {
@@ -78,7 +74,7 @@ strong {
 code {
     border-radius: calc(var(--block-border-radius) / 2);
     color: var(--color-accent-primary);
-    font-family: var(--font-geist-mono);
+    font-family: var(--font-geist-mono) !important;
     font-weight: 400;
     font-size: inherit;
     line-height: inherit;
@@ -89,5 +85,54 @@ code {
         display: inline-block;
         text-align: center;
         content: '`';
+    }
+}
+
+ol,
+ul,
+li {
+    font-weight: inherit;
+    font-size: inherit;
+}
+
+code[class*='language-'],
+pre[class*='language-'] {
+    margin: 0 !important;
+    padding: 0 !important;
+    text-shadow: none !important;
+    background: transparent !important;
+    color: var(--color-foreground) !important;
+    font-weight: 400 !important;
+
+    .token {
+        &.attr-name,
+        &.builtin,
+        &.char,
+        &.inserted,
+        &.selector,
+        &.string {
+            color: var(--color-accent-primary);
+        }
+
+        &.function,
+        &.keyword {
+            color: #3274cf;
+        }
+
+        &.class-name {
+            color: #4dc4a0;
+            font-weight: 600;
+        }
+
+        &.cdata,
+        &.comment,
+        &.doctype,
+        &.prolog {
+            color: #679a41;
+        }
+    }
+
+    .token.operator {
+        background: none;
     }
 }
