--- a/apps/web/src/app/(admin)/_scss/app.scss
+++ b/apps/web/src/app/(admin)/_scss/app.scss
@@ -3,12 +3,17 @@
 
 html,
 body {
-    background: var(--color-foreground, #000000);
+    width: 100%;
+    max-width: 100vw;
+    background: var(--color-background, #000000);
     color: var(--color-foreground, #fefefe);
+    font-size: 14px;
 }
 
 :root {
     --color-accent-primary: #ed1e79;
+    --color-success: #04e762;
+    --block-border-radius: 0.45rem;
 }
 
 input {
