--- a/apps/web/src/app/(admin)/admin/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/page.module.scss
@@ -1,24 +1,10 @@
 .container {
-    .header {
-        @media (min-width: 950px) {
-            padding-bottom: var(--layout-section-spacing);
-        }
-
-        .logo {
-            max-height: 6.5rem;
-            height: 100%;
-            width: auto;
-            max-width: min(100%, 80vw);
-        }
-    }
-
     .heading {
+        overflow: hidden;
         display: flex;
         flex-direction: column;
-        gap: 0.25rem;
-        padding-top: calc(var(--layout-section-spacing) * 4);
-        padding-bottom: calc(var(--layout-section-spacing) * 2);
-        width: 52rem;
+        gap: calc(var(--block-padding) / 2);
+        width: 100%;
         max-width: 100%;
     }
 
@@ -26,7 +12,25 @@
         display: flex;
         flex-direction: column;
         gap: var(--layout-section-padding);
-        width: 52rem;
-        max-width: 100%;
+        margin-top: calc(var(--layout-section-spacing) * 2);
+
+        .blocks {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+            grid-auto-rows: 1fr;
+            gap: var(--block-padding);
+            width: 100%;
+            max-width: 100%;
+
+            .block {
+                display: flex;
+                flex-direction: column;
+                gap: var(--block-padding);
+
+                a {
+                    width: fit-content;
+                }
+            }
+        }
     }
 }
