--- a/apps/web/src/components/informational/current-locale-flag.module.scss
+++ b/apps/web/src/components/informational/current-locale-flag.module.scss
@@ -2,6 +2,7 @@
     overflow: hidden;
     position: relative;
     height: 100%;
+    max-height: 3rem;
     width: 100%;
     aspect-ratio: 3 / 2;
     object-fit: cover;
