--- a/apps/web/src/components/informational/current-locale-flag.module.scss
+++ b/apps/web/src/components/informational/current-locale-flag.module.scss
@@ -3,7 +3,7 @@
     position: relative;
     height: 100%;
     max-height: 3rem;
-    width: 100%;
+    width: auto;
     aspect-ratio: 3 / 2;
     object-fit: cover;
     object-position: center;
