--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -21,7 +21,7 @@
             gap: var(--block-spacer);
             grid-template-columns: repeat(
                 auto-fit,
-                minmax(calc(var(--component-product-card-width) + var(--block-padding)), auto)
+                minmax(calc(var(--component-product-card-width) + var(--block-padding)), 1fr)
             );
         }
 
